Cloudents.Web/ClientApp/components/question/question-details/questionDetails.less
@import "../../../mixin.less";
.theme--light .btn.btn--disabled:not(.btn--icon):not(.btn--flat){
    background-color: rgba(0,0,0,0.12) !important;
}
.answer-question{
    .limited-width();
    @media(max-width: @screen-sm){
        padding-left: 0;
        padding-right: 0;
    }
    .question-wrap{
        margin-left: @logoWidth;
    }
    .breadcrumbs{
        font-size: 12px;
        font-weight: 600;
        margin-bottom: 22px;
        a.ask-question{
            color: #0455a8;
            display: inline-block;
        }
        span.question-category{
            margin: 0 2px;
            color: #4a4a4a;
        }
    }
    .question-data{
        max-width: @cellWidth;
        width: 100%;
    }
    .chat-wrapper{
        width: 100%;
        max-width: 304px;
        margin-left: 32px;
    }
    .md5{margin-left: 17px;}

    .xs4{margin: 0 17px;}

    .question-card{
        margin: 0 auto;
    }

    .add_answer{
        border: 8px solid #c7c7ee !important;
        border-top: 0px !important;
        margin: 0;
        height: 52px;
        border-radius: 0 0 4px 4px;
        font-size: 18px;
        text-transform: none;
        &.primary {
            background-color: #3532d5 !important;
          }
        &:disabled{
            background-color: #bbbbbb!important;
            color: white!important;
        }
    }

    .tab-padding{padding:8px; margin-bottom: 40px;}

    .tabs__bar{
        height: 65px;
        background-color: @color-white;
        border-bottom: solid 1px #bbbbbb;
        font-size: 18px;
        padding: 0 8px;
    }

    .tabs__container{

        .tabs__item{
            text-transform: none;
            &.tabs__item--active{ color: #3532d5!important;font-weight: bold;}
        }

        .tabs__slider.blue{
            border-bottom: 2px solid #3532d5;
        }
    }

   .show-form-trigger{
       background: white;
       border: 8px solid #c7c7ee;
       border-radius: 4px;
       height: 56px;
       display: flex;
       align-items: center;
       padding-left: 12px;

       div{
           font-size: 14px;
           letter-spacing: -0.3px;
           color: #3532d5;
       }
   }

   .chat-iframe iframe{
        @media(max-width: @screen-xs){
            min-height: ~"calc(100vh - 68px)";
            max-height: ~"calc(100vh - 68px)";
        }
   }

    //.answer-card:not(:hover) .accept-btn{
    //    display: none;
    //}
}

